Replaced getPrediction by getPredictions CapsisBridgeAccessories.R : added convertPredictions function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,9 @@ export(MMCreate)
 export(MMFitMetaModel)
 export(MMGet)
 export(MMGetMetaModelResult)
+export(MMGetMonteCarloPredictions)
 export(MMGetPossibleOutputTypes)
-export(MMGetPrediction)
+export(MMGetPredictions)
 export(MMGetSelectedOutputType)
 export(MMGetStratumGroups)
 export(MMLoad)
@@ -28,6 +29,7 @@ export(MMLoadMetaModel)
 export(MMSave)
 export(MMSaveMetaModel)
 export(convertDataSet)
+export(convertPredictions)
 export(getMetaModelMgr)
 export(getScript)
 export(plotMetaModel)
