--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,18 +4,17 @@ Title: Connect to the 'CAPSIS' Server and Run Simulations
 Version: 0.1.1
 Author: Jean-François Lavoie and Mathieu Fortin, Canadian Wood Fibre Centre, Canadian Forest Service
 Maintainer: Mathieu Fortin <mathieu.fortin.re@gmail.com>
-Copyright: Her Majesty the Queen in right of Canada
+Copyright: His Majesty the King in right of Canada
 Description: To be completed
 URL: https://sourceforge.net/projects/capsis4r/
 Imports:
-  ggplot2 (>= 3.3)
+  ggplot2 (>= 3.3),
+  J4R (>= 1.1.9)
 License: GPL-3
 BugReports: https://sourceforge.net/p/capsis4r/tickets/
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Suggests: 
     testthat
 Depends:
-  J4R (>= 1.1.1)
-  
