Added MetaModel wrapper class CapsisBridgeAccessories : removed plotMetaModel function and moved it to MetaModel class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(CBRelease)
 export(convertDataSet)
 export(convertPredictions)
 export(new_CapsisScript)
+export(new_MetaModel)
 export(new_MetaModelManager)
 export(new_OSMClass)
 export(new_OSMOutputRequestList)
