Added FVSClass and FVSStandInfo Replaced example data csv and updated FVSExample

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(CBRelease)
 export(convertDataSet)
 export(convertPredictions)
 export(new_CapsisScript)
+export(new_FVSClass)
+export(new_FVStandInfo)
 export(new_MetaModel)
 export(new_OSMClass)
 export(new_OSMOutputRequestList)
