FVSStandInfo : Modified class to support multiple standInfo data structs per simulation call OSMClass & FVSClass : changed ScriptResult package name to reflect refactoring changes in Repicea package FVSExample : added new StandInfoDict creation and parameter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(convertDataSet)
 export(convertPredictions)
 export(new_CapsisScript)
 export(new_FVSClass)
-export(new_FVStandInfo)
+export(new_FVStandInfoDict)
 export(new_MetaModel)
 export(new_OSMClass)
 export(new_OSMOutputRequestList)
