--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,11 @@
 
 export(convertDataSet)
 export(convertPredictions)
-export(new_CapsisScript)
+export(new_CapsisClass)
 export(new_FVSClass)
 export(new_FVStandInfoDict)
 export(new_MetaModel)
 export(new_OSMClass)
-export(new_OSMOutputRequestList)
 export(new_OSMResult)
+export(new_OutputRequestList)
+export(new_SimulationResult)
