Allowing for model parameterization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(new_OSMClass)
 export(new_OSMResult)
 export(new_OutputRequestList)
 export(new_SimulationResult)
+export(new_StartingValues)
