--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ export(new_OSMResult)
 export(new_OutputRequestList)
 export(new_SimulationResult)
 export(new_StartingValues)
+export(new_StartingValuesMap)
