--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ BugReports: https://github.com/CWFC-CCFB/CFSMetaModel4R/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.0
+SystemRequirements: Java 8
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
