--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: CFSMetaModel4R
 Type: Package
 Title: Allow to Fit Meta-Models From Existing Tree-Level Models
-Version: 1.6.1
+Version: 1.6.2
 Author: Jean-François Lavoie and Mathieu Fortin, Canadian Wood Fibre Centre, Canadian Forest Service
 Maintainer: Mathieu Fortin <mathieu.fortin.re@gmail.com>
 Copyright: His Majesty the King in right of Canada
 Description: A package to run simulations from tree- or plot-level models and fit meta-models.
 URL: https://github.com/CWFC-CCFB/CFSMetaModel4R
+Depends:
+  R (>= 3.5.0) 
 Imports:
   ggplot2 (>= 3.3),
   J4R (>= 1.2.3),
@@ -23,7 +25,7 @@ BugReports: https://github.com/CWFC-CCFB/CFSMetaModel4R/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
-SystemRequirements: Java 8
+SystemRequirements: Java 11
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
