--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -14,7 +14,7 @@ jobs:
   R-CMD-check:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
+        os: [windows-latest]
 #        java: [8, 11, 17]
 
     runs-on: ${{ matrix.os }}
